--- a/static/index.html
+++ b/static/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Weather App</title>
   </head>
   <body>
-    <form>
-      <input type="text" id="zip" placeholder="enter zip code here"/>
-      <textarea id="feelings"></textarea>
-      <button id="generate">Generate</button>
-    </form>
-    <div id="entryHolder">
-      <div id="date"></div>
-      <div id="temp"></div>
-      <div id="content"></div>
+    <div class="container">
+      <form>
+        <input type="text" id="zip" placeholder="enter zip code here" />
+        <textarea id="feelings"></textarea>
+        <button id="generate">Generate</button>
+      </form>
+      <div id="entryHolder">
+        <div id="date"></div>
+        <div id="temp"></div>
+        <div id="content"></div>
+      </div>
     </div>
     <script src="static.js"></script>
   </body>
