--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,6 @@
         <div id="content"></div>
       </div>
     </div>
-    <script src="static.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
